misc: fix page title wrapping
Adjust long links on code of conduct page. Change /coc to /conduct, adjust footer links.

Closes #7, #11

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -351,6 +351,9 @@ p.author {
   text-transform: uppercase;
   background: #FBFBFB;
 }
+.footer-nav a {
+  margin-right: 20px;
+}
 
 .channels { padding-bottom: 100px;}
 .channels hr { padding-bottom: 50px;}
